[build-system]
requires = ["scikit-build-core[pyproject]>=0.9.2"]
build-backend = "scikit_build_core.build"

[project]
name = "llama_cpp_lyrn"
dynamic = ["version"]
description = "Minimal Python bindings for the llama.cpp library"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "typing-extensions>=4.5.0"
]
requires-python = ">=3.8"

[tool.scikit-build]
wheel.packages = ["llama_cpp"]
cmake.verbose = true
cmake.minimum-version = "3.21"
minimum-version = "0.5.1"
sdist.include = ["vendor/llama.cpp/*"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "llama_cpp/__init__.py"
